--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,12 +2,13 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.Settings.SettingActivity">
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/vani_view"
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -32,7 +33,7 @@
             android:background="#1572A1"
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/setting"
-            app:titleMarginStart="150dp"
+            app:titleMarginStart="90dp"
             app:titleTextColor="#FFFFFF" />
 
         <TextView
