--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -12,7 +12,6 @@
         android:layout_height="129dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="84dp"
-        android:layout_marginBottom="32dp"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@
         android:layout_marginTop="140dp"
         android:layout_marginEnd="32dp"
         android:text="@string/weather"
-        android:textColor="#D9E4E6"
+        android:textColor="#F2F4F4"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
